objects/Contact.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issue_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID (ie Driver&apos;s License) was issued</description>
        <label>Primary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issuing_State__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the State in which the Primary ID (ie Driver&apos;s License) was issued in.</description>
        <label>Primary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_O__c</fullName>
        <description>This field is optional. The user manually populates this field. When enabled, it indicates that an individual is an executive officer, director, or principal shareholder of that financial institution. When disabled, the invidual is not one of these. This field can be used in sharing settings for the org.</description>
        <label>Reg O</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__SS_PE__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field is only used when Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SS__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field should not be used if Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Survey_Status__c</fullName>
        <description>This field is optional and manually updated. This field is currently not being used.</description>
        <inlineHelpText>110: Closing Survey Queued
801: Closing Survey Sent</inlineHelpText>
        <label>Survey Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the type of contact for this record. Typical pick list entries might include borrower, professional, referral source, or prospect. The value provided must match one of the values in the type pick list established for this organization.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Professional Contact</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__US_Citizen__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</description>
        <inlineHelpText>The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</inlineHelpText>
        <label>W7 Exception 1a Partnership EIN Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>W7 Foreign Military ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. This field is used to specify the external ID / LookupKey for the contact record. ( A unique identifier )</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMSID__c</fullName>
        <description>PRODUCT BACKLOG ITEM 153457</description>
        <label>LMSID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Datetime__c</fullName>
        <description>Notes the datetime of the most recently added activity.</description>
        <label>Last Activity Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Verified_Date__c</fullName>
        <description>Last time an Email was verified (Brad&apos;s Group)</description>
        <label>Last Email Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_SFDC2__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_SFDC2__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>Requested in ticket #66266 specifically for C&amp;I Contact but can be added for all business unit page layouts; value maps from Lead.LinkedIn field during Lead conversion</description>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_NMLS_ID__c</fullName>
        <label>Loan Officer NMLS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Loan_Type_SFDC2__c</fullName>
        <label>Mailing Address Loan Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Mortgage_Lender_SFDC2__c</fullName>
        <label>Mailing Address Mortgage Lender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Purchase_Amount_SFDC2__c</fullName>
        <label>Mailing Address Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailing_Purchase_Date_SFDC2__c</fullName>
        <label>Mailing Address Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marital_Status_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Single, never married</fullName>
                </value>
                <value>
                    <fullName>Single, previously divorced</fullName>
                </value>
                <value>
                    <fullName>Married, never divorced</fullName>
                </value>
                <value>
                    <fullName>Married, previously divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed, previously divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed, never divorced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>old_Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Banking_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Mobile Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moved_from_Prev_to_SNI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old_Moved from Prev to C&amp;I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <description>Date field for Capital Markets</description>
        <label>NDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Worth_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Net Worth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $10,000</fullName>
                </value>
                <value>
                    <fullName>$10,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $249,999</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500K - $1MM</fullName>
                </value>
                <value>
                    <fullName>$1MM - $5MM</fullName>
                </value>
                <value>
                    <fullName>$5MM - $10MM</fullName>
                </value>
                <value>
                    <fullName>$10MM - $25MM</fullName>
                </value>
                <value>
                    <fullName>$25MM - $50MM</fullName>
                </value>
                <value>
                    <fullName>$50MM - $100MM</fullName>
                </value>
                <value>
                    <fullName>$100MM - $500MM</fullName>
                </value>
                <value>
                    <fullName>$500MM+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Children_SFDC2__c</fullName>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>No. of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Occupation_SFDC2__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Licenses_SFDC2__c</fullName>
        <inlineHelpText>A comma-separated list of other licenses held by contact not included in the Professional Licenses field</inlineHelpText>
        <label>Other Licenses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <label>Owner Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <inlineHelpText>Is this contact the owner of the business?</inlineHelpText>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>005i0000001DN5mAAG</fullName>
                    <isActive>false</isActive>
                    <label>005i0000001DN5mAAG</label>
                </value>
                <value>
                    <fullName>005i0000001DNCdAAO</fullName>
                    <isActive>false</isActive>
                    <label>005i0000001DNCdAAO</label>
                </value>
                <value>
                    <fullName>Bradley Greer</fullName>
                    <isActive>false</isActive>
                    <label>Bradley Greer</label>
                </value>
                <value>
                    <fullName>Casey Carstairs</fullName>
                    <isActive>false</isActive>
                    <label>Casey Carstairs</label>
                </value>
                <value>
                    <fullName>Colin Gurley</fullName>
                    <isActive>false</isActive>
                    <label>Colin Gurley</label>
                </value>
                <value>
                    <fullName>Darin Judis</fullName>
                    <isActive>false</isActive>
                    <label>Darin Judis</label>
                </value>
                <value>
                    <fullName>Elise Yung</fullName>
                    <isActive>false</isActive>
                    <label>Elise Yung</label>
                </value>
                <value>
                    <fullName>JALVIZO</fullName>
                    <isActive>false</isActive>
                    <label>JALVIZO</label>
                </value>
                <value>
                    <fullName>James Knight</fullName>
                    <isActive>false</isActive>
                    <label>James Knight</label>
                </value>
                <value>
                    <fullName>Kristin Binkley</fullName>
                    <isActive>false</isActive>
                    <label>Kristin Binkley</label>
                </value>
                <value>
                    <fullName>RVILLA</fullName>
                    <isActive>false</isActive>
                    <label>RVILLA</label>
                </value>
                <value>
                    <fullName>Sherry McCarty</fullName>
                    <isActive>false</isActive>
                    <label>Sherry McCarty</label>
                </value>
                <value>
                    <fullName>TAKHAVAN</fullName>
                    <isActive>false</isActive>
                    <label>TAKHAVAN</label>
                </value>
                <value>
                    <fullName>Taneasha Newsome</fullName>
                    <isActive>false</isActive>
                    <label>Taneasha Newsome</label>
                </value>
                <value>
                    <fullName>rvill</fullName>
                    <isActive>false</isActive>
                    <label>rvill</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_2_IPL__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portfolio_Balance__c</fullName>
        <description>How much each Advisor has in his/her portfolio</description>
        <label>Portfolio Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Gross__c</fullName>
        <description>What is the earning power/potential of the Rep?</description>
        <label>Potential Gross</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_Org_ID__c</fullName>
        <label>Prev Org ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Relationship_SFDC2__c</fullName>
        <label>Primary Business Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Signer</fullName>
                </value>
                <value>
                    <fullName>Owner/Signer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Financial Advisor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Beneficial Party</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Function_Name__c</fullName>
        <label>old_Primary Function Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Occupational_Role__c</fullName>
        <label>Primary Occupational Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Code__c</fullName>
        <label>Privacy Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private_Investor_SFDC2__c</fullName>
        <label>Private Investor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>old_Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACG Chapter Staff</fullName>
                </value>
                <value>
                    <fullName>Corporate (CEO, CFO, Corporate Development Officer)</fullName>
                </value>
                <value>
                    <fullName>Privately Held Business Owner or Executive</fullName>
                </value>
                <value>
                    <fullName>Investment Banker/Intermediary</fullName>
                </value>
                <value>
                    <fullName>Limited Partner</fullName>
                </value>
                <value>
                    <fullName>Mezzanine Lender</fullName>
                </value>
                <value>
                    <fullName>No Profession Provided</fullName>
                </value>
                <value>
                    <fullName>Private Equity Group</fullName>
                </value>
                <value>
                    <fullName>Service Advisor (Attorneys, Accountants, Consultants)</fullName>
                </value>
                <value>
                    <fullName>Senior Lender (Commercial Bank, Specialty Finance, Etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_License_SFDC2__c</fullName>
        <inlineHelpText>A comma-separated list of professional license names</inlineHelpText>
        <label>Professional License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Rewards_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>Purchase Rewards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Reporting_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RITM0019792</description>
        <label>Quarterly Reporting Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REC_Rate_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether rate sheet should be sent or not (checked = YES Send)</description>
        <label>Receive Rate Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RateSheet__c</fullName>
        <description>This is to identify which type(s) of rate sheets should be sent out to Contacts for Lending Division.</description>
        <label>Rate Sheet Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Income Property</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Record_Type__c</fullName>
        <label>Reporting Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC2__c</fullName>
        <formula>RecordType.Name == &apos;Business SFDC2&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFTPO_Status__c</fullName>
        <label>SFTPO Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved - Activated</fullName>
                </value>
                <value>
                    <fullName>Approved - Not activated</fullName>
                </value>
                <value>
                    <fullName>Approved - Dormant</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMS_Opt_In_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitailIQProfessionalID__c</fullName>
        <label>UNUSED_CapitailIQProfessionalID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyID__c</fullName>
        <description>The field must be added to the layout in Professional Edition.</description>
        <label>PE_S&amp;P Capital IQ Company ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQCompanyID__c!=0, Text(SNPCAPIQ__CapitalIQCompanyID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQCompanyNameEnrich__c</fullName>
        <label>S&amp;P Capital IQ Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQPersonID__c</fullName>
        <description>The field must be added to the layout in Professional Edition.</description>
        <label>PE_S&amp;P Capital IQ Person ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQPersonID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQPersonID__c!=0, Text(SNPCAPIQ__CapitalIQPersonID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQProfessionalID__c</fullName>
        <description>The field must be added to the layout in Professional Edition.</description>
        <label>PE_S&amp;P Capital IQ Professional ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNPCAPIQ__CapitalIQProfessionalID_txt__c</fullName>
        <formula>IF(SNPCAPIQ__CapitalIQProfessionalID__c!=0, Text(SNPCAPIQ__CapitalIQProfessionalID__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S&amp;P Capital IQ Professional ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_ID__c</fullName>
        <externalId>true</externalId>
        <label>SQL ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Series_7__c</fullName>
        <description>Does the Rep hold a Series 7 (Y/N)?</description>
        <label>Series 7</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <inlineHelpText>Is the contact an authorized signed on the account?</inlineHelpText>
        <label>Signer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Date_of_Birth_SFDC2__c</fullName>
        <label>Spouse Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spouse_First_Name_SFDC2__c</fullName>
        <label>Spouse First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Last_Name_SFDC2__c</fullName>
        <label>Spouse Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_SFDC2__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Registration in Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Title_SFDC2__c</fullName>
        <label>Sub-Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Key Executive</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Liason</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_with_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketo specific Field. Controls whether this gets pulled into Marketo</description>
        <label>Sync with Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPO_Contact_Person_ID__c</fullName>
        <label>TPO Contact Person ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Conversion_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by ETL tool to trigger conversion from Contact to Person Account</description>
        <label>Trigger Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_Customer_SFDC2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for SFDC 2.0 project as defined by the &quot;SFDC 2.0 Fields&quot; document.</description>
        <label>VIP Customer</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>